# OpenGrm-NGram

./: AUTHORS  BUILD.bazel  Makefile.am  Makefile.in  NEWS  README  README.md  WORKSPACE.bazel  configure  configure.ac
src/: Makefile.in
src/include/: Makefile.in
src/include/ngram/: hist-arc.h  hist-mapper.h  lexicographic-map.h  ngram-absolute.h  ngram-bayes-model-merge.h  ngram-complete.h  ngram-context-merge.h  ngram-context-prune.h  ngram-context.h  ngram-count-merge.h  ngram-count-of-counts.h  ngram-count-prune.h  ngram-count.h  ngram-hist-merge.h  ngram-input.h  ngram-katz.h  ngram-kneser-ney.h  ngram-list-prune.h  ngram-make.h  ngram-marginalize.h  ngram-merge.h  ngram-model-merge.h  ngram-model.h  ngram-mutable-model.h  ngram-output.h  ngram-randgen.h  ngram-relentropy.h  ngram-replace-merge.h  ngram-seymore-shrink.h  ngram-shrink.h  ngram-split.h  ngram-transfer.h  ngram-unsmoothed.h  ngram-witten-bell.h  util.h
src/lib/: Makefile.am  Makefile.in  hist-arc.cc  ngram-absolute.cc  ngram-context.cc  ngram-count-prune.cc  ngram-count.cc  ngram-input.cc  ngram-kneser-ney.cc  ngram-list-prune.cc  ngram-make.cc  ngram-marginalize.cc  ngram-model.cc  ngram-output.cc  ngram-shrink.cc  util.cc
src/test/: Makefile.am  Makefile.in  disttestsetup.sh  ngramcount_histograms_test.sh  ngramcount_test.sh  ngramdistrand.sh  ngramhisttest-main.cc  ngramhisttest.cc  ngrammake_test.sh  ngramperplexity_test.sh  ngramprint_test.sh  ngramrand_test.sh  ngramrandtest-main.cc  ngramrandtest.cc  ngramshrink_test.sh  ngramsymbols_test.sh
src/test/testdata/: earnest.mrg.smooth.norm.sym  earnest.sym
