# Copyright 2015-2022 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel build file for NGram.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

prefix_dir = "src/"

COPTS_LIB = select({
    "@bazel_tools//src/conditions:windows": [
    ],
    "//conditions:default": [
        "-Wno-maybe-uninitialized",
        "-Wno-sign-compare",
        "-Wno-unused-but-set-variable",
    ],
})

COPTS_BIN = select({
    "@bazel_tools//src/conditions:windows": [
    ],
    "//conditions:default": [
        "-Wno-sign-compare",
    ],
})

cc_library(
    name = "opengrm-ngram-lib",
    srcs = [
        prefix_dir + "lib/ngram-absolute.cc",
        prefix_dir + "lib/ngram-context.cc",
        prefix_dir + "lib/ngram-count.cc",
        prefix_dir + "lib/ngram-count-prune.cc",
        prefix_dir + "lib/ngram-input.cc",
        prefix_dir + "lib/ngram-kneser-ney.cc",
        prefix_dir + "lib/ngram-list-prune.cc",
        prefix_dir + "lib/ngram-make.cc",
        prefix_dir + "lib/ngram-marginalize.cc",
        prefix_dir + "lib/ngram-output.cc",
        prefix_dir + "lib/ngram-shrink.cc",
        prefix_dir + "lib/util.cc",
    ],
    hdrs = [
        prefix_dir + "include/ngram/hist-arc.h",
        prefix_dir + "include/ngram/hist-mapper.h",
        prefix_dir + "include/ngram/lexicographic-map.h",
        prefix_dir + "include/ngram/ngram-absolute.h",
        prefix_dir + "include/ngram/ngram-bayes-model-merge.h",
        prefix_dir + "include/ngram/ngram-complete.h",
        prefix_dir + "include/ngram/ngram-context.h",
        prefix_dir + "include/ngram/ngram-context-merge.h",
        prefix_dir + "include/ngram/ngram-context-prune.h",
        prefix_dir + "include/ngram/ngram-count.h",
        prefix_dir + "include/ngram/ngram-count-merge.h",
        prefix_dir + "include/ngram/ngram-count-of-counts.h",
        prefix_dir + "include/ngram/ngram-count-prune.h",
        prefix_dir + "include/ngram/ngram-hist-merge.h",
        prefix_dir + "include/ngram/ngram-input.h",
        prefix_dir + "include/ngram/ngram-katz.h",
        prefix_dir + "include/ngram/ngram-kneser-ney.h",
        prefix_dir + "include/ngram/ngram-list-prune.h",
        prefix_dir + "include/ngram/ngram-make.h",
        prefix_dir + "include/ngram/ngram-marginalize.h",
        prefix_dir + "include/ngram/ngram-merge.h",
        prefix_dir + "include/ngram/ngram-model.h",
        prefix_dir + "include/ngram/ngram-model-merge.h",
        prefix_dir + "include/ngram/ngram-mutable-model.h",
        prefix_dir + "include/ngram/ngram-output.h",
        prefix_dir + "include/ngram/ngram-randgen.h",
        prefix_dir + "include/ngram/ngram-relentropy.h",
        prefix_dir + "include/ngram/ngram-replace-merge.h",
        prefix_dir + "include/ngram/ngram-seymore-shrink.h",
        prefix_dir + "include/ngram/ngram-shrink.h",
        prefix_dir + "include/ngram/ngram-split.h",
        prefix_dir + "include/ngram/ngram-transfer.h",
        prefix_dir + "include/ngram/ngram-unsmoothed.h",
        prefix_dir + "include/ngram/ngram-witten-bell.h",
        prefix_dir + "include/ngram/util.h",
    ],
    copts = COPTS_LIB,
    includes = [prefix_dir + "include"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/base:log_severity",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/container:node_hash_map",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/strings",
        "@org_openfst//:far_base",
        "@org_openfst//:fst",
        "@org_openfst//:fstscript_base",
    ],
)

# ----------------------
# Command-line binaries
# ----------------------

[
    cc_binary(
        name = "ngram%s" % operation,
        srcs = [
            prefix_dir + "bin/ngram%s.cc" % operation,
            prefix_dir + "bin/ngram%s-main.cc" % operation,
        ],
        copts = COPTS_BIN,
        deps = [":opengrm-ngram-lib"],
    )
    for operation in [
        "apply",
        "context",
        "count",
        "info",
        "make",
        "marginalize",
        "merge",
        "perplexity",
        "print",
        "randgen",
        "read",
        "shrink",
        "sort",
        "symbols",
        "transfer",
    ]
]

cc_binary(
    name = "ngramsplit",
    srcs = [
        prefix_dir + "bin/ngramsplit.cc",
        prefix_dir + "bin/ngramsplit-main.cc",
    ],
    deps = [
        ":opengrm-ngram-lib",
        "@org_openfst//:farscript",
    ],
)
