# Copyright 2015-2020 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel (https://bazel.build/) workspace.

workspace(name = "org_opengrm_ngram")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    # Name has to match workspace name in:
    #   https://github.com/abseil/abseil-cpp/blob/master/WORKSPACE
    name = "com_google_absl",
    strip_prefix = "abseil-cpp-master",
    urls = ["https://github.com/abseil/abseil-cpp/archive/master.zip"],
)

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-master",
    urls = ["https://github.com/google/googletest/archive/master.zip"],
)

# ------------------------------------------------------------------------------
# OpenFst:
# ------------------------------------------------------------------------------
openfst_version = "1.8.1-rc1"

http_archive(
    name = "org_openfst",
    urls = ["https://github.com/agutkin/finite_state/raw/main/openfst-%s.tar.gz" % openfst_version],
    sha256 = "e6e2fa06de302dd72741ffc30e772b88f0b2baec2f6dae780ca6412a3a213d8a",
    strip_prefix = "openfst-%s" % openfst_version
)
